{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 84,
  "lineage": "b72f657c-3597-67d7-8908-6b289bf4d9c1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_cluster_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713067384:internet-gateway/igw-088b96fea722ad2ce",
            "id": "igw-088b96fea722ad2ce",
            "owner_id": "339713067384",
            "tags": {
              "environment": "practice",
              "name": "eks_cluster_intenet_gateway"
            },
            "tags_all": {
              "environment": "practice",
              "name": "eks_cluster_intenet_gateway"
            },
            "vpc_id": "vpc-0917c2debd1e80ad9"
          },
          "dependencies": [
            "aws_vpc.eks_cluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_cluster_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713067384:route-table/rtb-0bb921ce58fda857b",
            "id": "rtb-0bb921ce58fda857b",
            "owner_id": "339713067384",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-088b96fea722ad2ce",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "environment": "practice",
              "name": "eks_cluster_intenet_gateway"
            },
            "tags_all": {
              "environment": "practice",
              "name": "eks_cluster_intenet_gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-0917c2debd1e80ad9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.eks_cluster_gateway",
            "aws_vpc.eks_cluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad76f385a457eade",
            "route_table_id": "rtb-0bb921ce58fda857b",
            "subnet_id": "subnet-08fdaa90ab9015060"
          },
          "dependencies": [
            "aws_internet_gateway.eks_cluster_gateway",
            "aws_route_table.eks_cluster_route_table",
            "aws_subnet.eks_cluster_subnets",
            "aws_vpc.eks_cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6b509e8a0fe013d",
            "route_table_id": "rtb-0bb921ce58fda857b",
            "subnet_id": "subnet-00a40e7b93b6e28e7"
          },
          "dependencies": [
            "aws_internet_gateway.eks_cluster_gateway",
            "aws_route_table.eks_cluster_route_table",
            "aws_subnet.eks_cluster_subnets",
            "aws_vpc.eks_cluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713067384:security-group/sg-029f4078ff40d5a15",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029f4078ff40d5a15",
            "ingress": [],
            "name": "terraform-20250401155111786100000005",
            "name_prefix": "terraform-",
            "owner_id": "339713067384",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "practice",
              "name": "eks_cluster_intenet_gateway"
            },
            "tags_all": {
              "environment": "practice",
              "name": "eks_cluster_intenet_gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-0917c2debd1e80ad9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_cluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713067384:security-group/sg-0e06b381a800e1163",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e06b381a800e1163",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250401155111787600000006",
            "name_prefix": "terraform-",
            "owner_id": "339713067384",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "practice",
              "name": "eks_cluster_intenet_gateway"
            },
            "tags_all": {
              "environment": "practice",
              "name": "eks_cluster_intenet_gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-0917c2debd1e80ad9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_cluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_cluster_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713067384:subnet/subnet-08fdaa90ab9015060",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fdaa90ab9015060",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713067384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "environment": "practice",
              "name": "eks-cluster-subnets"
            },
            "tags_all": {
              "environment": "practice",
              "name": "eks-cluster-subnets"
            },
            "vpc_id": "vpc-0917c2debd1e80ad9"
          },
          "dependencies": [
            "aws_vpc.eks_cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713067384:subnet/subnet-00a40e7b93b6e28e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a40e7b93b6e28e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713067384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "environment": "practice",
              "name": "eks-cluster-subnets"
            },
            "tags_all": {
              "environment": "practice",
              "name": "eks-cluster-subnets"
            },
            "vpc_id": "vpc-0917c2debd1e80ad9"
          },
          "dependencies": [
            "aws_vpc.eks_cluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_cluster_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713067384:vpc/vpc-0917c2debd1e80ad9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aa72febe3d5f1fd8",
            "default_route_table_id": "rtb-0cc1b41e952a0ebdc",
            "default_security_group_id": "sg-0c372da500ff8cc6b",
            "dhcp_options_id": "dopt-0ebe83eba1d75ca17",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0917c2debd1e80ad9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cc1b41e952a0ebdc",
            "owner_id": "339713067384",
            "tags": {
              "environment": "practice",
              "name": "eks-cluster-vpc"
            },
            "tags_all": {
              "environment": "practice",
              "name": "eks-cluster-vpc"
            }
          }
        }
      ]
    }
  ]
}